--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ __pycache__/
 .idea/
 # C extensions
 *.so
-
+.ipynb_checkpoints/
+**/.ipynb_checkpoints/
 # Distribution / packaging
 .Python
 build/
